--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="content-header-main"><span>Berisi informasi-informasi seputar NAPZA<!--Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, non.--></span></div>
         </div>
-        <div class="container-second" id="second">
+        <div class="container-second tahukah" id="second">
             <div class="header1">
                     <h1>TAHUKAH KAMU?</h1>
             </div>
@@ -28,8 +28,8 @@
                     <div class="sumber" id="sumber2"><a href="http://repositori.kemdikbud.go.id/21834/1/XI_Biologi_KD-3.11_Final.pdf" target="_blank">repositori.kemdikbud.go.id</a></div>
                 </div>
                 <div class="tahukah-logo">
-                    <div class="logo1"><img src="img/gambar1.png" alt="Apakah kamu tau?"></div>
-                    <div class="sumber"><a href="http://www.freepik.com" target="_blank">Designed by Freepik</a></div>
+                    <div class="logo1"><img src="assets/img/gambar1.png" alt="Apakah kamu tau?"></div>
+                    <div class="sumber" id="freepik"><a href="http://www.freepik.com" target="_blank">Designed by Freepik</a></div>
                 </div>
             </div>
         </div>
@@ -87,8 +87,8 @@
                                     dan <a href="https://pahamify.com/blog/pahami-materi/materi-ipa/efek-dan-bahaya-senyawa-psikotropika/" target="_blank">Pahamify.com</a></div>
                         </div>
                         <div class="tahukah-logo">
-                            <div class="logo1"><img src="img/stimulan.png" alt="vector-stimulan" title="stimulan"></div>
-                            <div class="sumber"><a href="http://www.freepik.com">Designed by macrovector / Freepik</a></div>
+                            <div class="logo1"><img src="assets/img/stimulan.png" alt="vector-stimulan" title="stimulan"></div>
+                            <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by macrovector / Freepik</a></div>
                         </div>
                     </div>
                 </div>
@@ -102,8 +102,8 @@
                                     dan <a href="https://pahamify.com/blog/pahami-materi/materi-ipa/efek-dan-bahaya-senyawa-psikotropika/" target="_blank">Pahamify.com</a></div>
                         </div>
                         <div class="tahukah-logo">
-                            <div class="logo1" id="depresan"><img src="img/depresan.png" alt="vector-depresan" title="depresan"></div>
-                            <div class="sumber"><a href="http://www.freepik.com">Designed by macrovector / Freepik</a></div>
+                            <div class="logo1" id="depresan"><img src="assets/img/depresan.png" alt="vector-depresan" title="depresan"></div>
+                            <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by macrovector / Freepik</a></div>
                         </div>
                     </div>
                 </div>
@@ -118,15 +118,14 @@
                                     dan <a href="https://pahamify.com/blog/pahami-materi/materi-ipa/efek-dan-bahaya-senyawa-psikotropika/" target="_blank">Pahamify.com</a></div>
                         </div>
                         <div class="tahukah-logo">
-                            <div class="logo1"><img src="img/halusinasi.png" alt="vector-halusinasi" title="halusinogen"></div>
-                            <div class="sumber"><a href="http://www.freepik.com">Designed by stories / Freepik</a></div>
+                            <div class="logo1"><img src="assets/img/halusinasi.png" alt="vector-halusinasi" title="halusinogen"></div>
+                            <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by stories / Freepik</a></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container-fifth">
-            <div class="container-second" id="second">
+        <div class="container-fift tahukah" id="dua">
                 <div class="header1">
                         <h1>TAHUKAH KAMU?</h1>
                 </div>
@@ -140,7 +139,6 @@
                         <iframe width="420" height="340" src="https://youtube.com/embed/Wyt1qTm_GHc" frameborder="0" title="Skizofrenia"></iframe>
                     </div>
                 </div>
-            </div>
         </div>
         <div class="container-sixth satu dua">
             <div class="container6">
@@ -305,8 +303,8 @@
                     <div class="card">
                         <div class="header3"><span>1</span></div>
                         <div class="tahukah-logo">
-                            <div class="logo1"><img src="img/JanganYaGabaik.png" alt="gambar jangan" title="Jangan"></div>
-                            <div class="sumber"><a href="http://www.freepik.com">Designed by macrovector / Freepik</a></div>
+                            <div class="logo1"><img src="assets/img/JanganYaGabaik.png" alt="gambar jangan" title="Jangan"></div>
+                            <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by macrovector / Freepik</a></div>
                         </div>
                         <div class="content3"><span> <em style="color:rgba(25, 25, 25, .7); font-weight: bold;">Jangan pernah untuk mencoba-coba</em> menggunakan narkotika, kecuali atas dasar 
                             pertimbangan medis atau dokter.</span></div>
@@ -315,8 +313,8 @@
                     <div class="card">
                         <div class="header3"><span>2</span></div>
                         <div class="tahukah-logo">
-                            <div class="logo1"><img src="img/GreatIdea.png" alt="vector-mengetahui" title="Mengetahui dampak buruk narkoba"></div>
-                            <div class="sumber"><a href="http://www.freepik.com">Designed by syarifahbrit / Freepik</a></div>
+                            <div class="logo1"><img src="assets/img/GreatIdea.png" alt="vector-mengetahui" title="Mengetahui dampak buruk narkoba"></div>
+                            <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by syarifahbrit / Freepik</a></div>
                         </div>
                         <div class="content3"><span>Mengetahui akan berbagai macam dampak buruk narkoba.</span></div>
                             <div class="sumber" id="sumber2"><a href="https://tanahlautkab.bnn.go.id/tips-cara-mencegah-penyalahgunaan-narkoba/" target="_blank">tanahlautkab.bnn.go.id</a></div>
@@ -324,8 +322,8 @@
                     <div class="card">
                         <div class="header3"><span>3</span></div>
                         <div class="tahukah-logo">
-                            <div class="logo1"><img src="img/TeamWork.png" alt="vector-pergaulan" title="Pergaulan sehat"></div>
-                            <div class="sumber"><a href="http://www.freepik.com">Designed by macrovector / Freepik</a></div>
+                            <div class="logo1"><img src="assets/img/TeamWork.png" alt="vector-pergaulan" title="Pergaulan sehat"></div>
+                            <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by macrovector / Freepik</a></div>
                         </div>
                         <div class="content3"><span>Memilih pergaulan yang baik dan jauhi pergaulan yang bisa mengantarkan kita pada penyalahgunaan narkotika.</span></div>
                         <div class="sumber" id="sumber2"><a href="https://tanahlautkab.bnn.go.id/tips-cara-mencegah-penyalahgunaan-narkoba/" target="_blank">tanahlautkab.bnn.go.id</a></div>
@@ -333,8 +331,8 @@
                     <div class="card">
                         <div class="header3"><span>4</span></div>
                         <div class="tahukah-logo">
-                            <div class="logo1"><img src="img/Hukuman.png" alt="vector-hukuman" title="ancaman hukuman"></div>
-                            <div class="sumber"><a href="http://www.freepik.com">Designed by studiogstock / Freepik</a></div>
+                            <div class="logo1"><img src="assets/img/Hukuman.png" alt="vector-hukuman" title="ancaman hukuman"></div>
+                            <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by studiogstock / Freepik</a></div>
                         </div>
                         <div class="content3"><span>Selalu ingatkan bahwawasannya ancaman hukuman untuk penyalah guna Narkoba, 
                             apalagi bagi pengedar Narkoba adalah Lembaga Pemasyarakatan.</span></div>
@@ -343,8 +341,8 @@
                     <div class="card">
                         <div class="header3"><span>5</span></div>
                         <div class="tahukah-logo">
-                            <div class="logo1"><img src="img/JanganYaGabaik.png" alt="vector-jangan" title="jangan"></div>
-                            <div class="sumber"><a href="http://www.freepik.com">Designed by macrovector / Freepik</a></div>
+                            <div class="logo1"><img src="assets/img/JanganYaGabaik.png" alt="vector-jangan" title="jangan"></div>
+                            <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by macrovector / Freepik</a></div>
                         </div>
                         <div class="content3"><span>Bila mempunyai masalah maka cari jalan keluar yang baik dan jangan jadikan narkoba sebagai jalan pelarian.</span></div>
                         <div class="sumber" id="sumber2"><a href="https://tanahlautkab.bnn.go.id/tips-cara-mencegah-penyalahgunaan-narkoba/" target="_blank">tanahlautkab.bnn.go.id</a></div>
@@ -352,6 +350,7 @@
                 </div>
             </div>
         </div>
+        <!--
         <div class="container-eleventh satu">
             <div class="container11 satujuga">
                 <div class="header1">
@@ -360,12 +359,12 @@
                 <div class="container3-2">
                     <div class="card">
                         <div class="poster-main">
-                            <div class="poster"><img src="img//james-healy-0NFvQFbJ6kI-unsplash.jpg" alt="poster"></div>
+                            <div class="poster"><img src="assets/img/james-healy-0NFvQFbJ6kI-unsplash.jpg" alt="poster"></div>
                         </div>
                     </div>
                     <div class="card">
                         <div class="poster-main">
-                            <div class="poster"><img src="img//james-healy-0NFvQFbJ6kI-unsplash.jpg" alt="poster"></div>
+                            <div class="poster"><img src="assets/img/james-healy-0NFvQFbJ6kI-unsplash.jpg" alt="poster"></div>
                         </div>
                     </div>
                 </div>
@@ -373,23 +372,67 @@
                     <h1>Lihat PDF <a href="https://www.youtube.com/" target="_blank">disini</a></h1>
                 </div>
             </div>
+        </div>-->
+        <div class="container-eleventh satu">
+            <div class="container11 satujuga">
+                <div class="header1">
+                    <h1>MELAPORKAN PENYALAHGUNAAN NARKOBA!</h1>
+                </div>
+                <div class="header1" id="lapor">
+                    <h1>1. Silahkan kunjungi <a href="https://bnn.go.id/lapor/" target="_blank">bnn.go.id/lapor/</a></h1>
+                    <h1>2. Isi formulir P4GN yang telah disediakan</h1>
+                    <h1>3. Isi identtitas pelapor</h1>
+                    <h1>4. Isi identitas terlapor</h1>
+                    <h1>5. Upload foto lokasi</h1>
+                </div>
         </div>
+        </div>
+
+        <div class="container-eleventh satu" id="infografis">
+            <div class="container11">
+                <div class="header1">
+                    <h1>INFOGRAFIS</h1>
+                </div>
+                <div class="container-pdf">
+                        <embed src="assets/file/NAPZA_KELOMPOK2.pdf" type="application/pdf">
+                </div>
+                <div class="header1" id="hp">
+                    <h1>Maaf, PDF tidak dapat ditampikan. Silahkan kunjungi link dibawah</a></h1>
+                </div>
+                <div class="header1" id="font">
+                    <h1>Lihat PDF <a href="https://drive.google.com/file/d/1xj3UaN-NOSTXGxxOk1zlL8-4u_FsH8D1/view?usp=sharing" target="_blank">disini</a></h1>
+                </div>
+        </div>
+        </div>
+        <div class="container-twelfth" id="maaf">
+            <div class="container12 satu juga">
+                <div class="header1">
+                    <h1>PERMOHONAN MAAF</h1>
+                    <h1 class="hitam">Kami menyadari bahwasanya website kami memiliki visual berupa gambar yang sedikit, 
+                        dikarenakan <span>susahnya mencari gambar yang bebas lisensi</span>. Oleh karena itu kami menyarankan 
+                        untuk tidak hanya mencari informasi seputas NAPZA melalui website kami, Melainkan juga dari beberapa website. Terimakasih</h1>
+                </div>
+            </div>
+        </div>
+
         <div class="container-twelfth satu dua">
             <div class="container12 ">
                 <div class="header1">
-                    <h1>DARI KAMI,</h1>
-                    <h4>KELOMPOK 2 XI MIPA 6</h4>
+                    <h1>DARI KELOMPOK 2,</h1>
+                    <h4>XI MIPA 6</h4>
                 </div>
                 <div class="container3-2">
                     <div class="tahukah-logo akhir">
-                        <div class="logo1"><img src="img/team1.png" alt="teamwork" title="TERIMAKASIH UDAH MAU BACA"></div>
+                        <div class="logo1"><img src="assets/img/team1.png" alt="teamwork" title="TERIMAKASIH UDAH MAU BACA"></div>
+                        <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by studiogstock / Freepik</a></div>
                     </div>
                     <div class="card">
                         <div class="content3"><span>Adrian Rafi Ronald / 01 <br><br> Ammareswara Fadhil Rahadi / 04 <br><br> 
                         Haikal Irham Mulya / 19 <br><br> Muhammad Bahrul Mafaza / 24 <br><br>Muhammad Dzaki Arkaan Hidayat / 25</span></div>
                     </div>
                     <div class="tahukah-logo akhir">
-                        <div class="logo1"><img src="img/team.png" alt="teamwork" title="TERIMAKASIH YA"></div>
+                        <div class="logo1"><img src="assets/img/team1.png" alt="teamwork" title="TERIMAKASIH YA"></div>
+                        <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by studiogstock / Freepik</a></div>
                     </div>
                 </div>
             </div>
