--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                         <embed src="assets/file/NAPZA_KELOMPOK2.pdf" type="application/pdf">
                 </div>
                 <div class="header1" id="hp">
-                    <h1>Maaf, PDF tidak dapat ditampikan. Silahkan kunjungi link dibawah</a></h1>
+                    <h1>Maaf, PDF tidak dapat ditampilkan. Silahkan kunjungi link dibawah</a></h1>
                 </div>
                 <div class="header1" id="font">
                     <h1>Lihat PDF <a href="https://drive.google.com/file/d/1xj3UaN-NOSTXGxxOk1zlL8-4u_FsH8D1/view?usp=sharing" target="_blank">disini</a></h1>
