benerin sumber gambar

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                         <div class="header3"><span>1</span></div>
                         <div class="tahukah-logo">
                             <div class="logo1"><img src="assets/img/JanganYaGabaik.png" alt="gambar jangan" title="Jangan"></div>
-                            <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by macrovector / Freepik</a></div>
+                            <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by Freepik</a></div>
                         </div>
                         <div class="content3"><span> <em style="color:rgba(25, 25, 25, .7); font-weight: bold;">Jangan pernah untuk mencoba-coba</em> menggunakan narkotika, kecuali atas dasar 
                             pertimbangan medis atau dokter.</span></div>
@@ -342,7 +342,7 @@
                         <div class="header3"><span>5</span></div>
                         <div class="tahukah-logo">
                             <div class="logo1"><img src="assets/img/JanganYaGabaik.png" alt="vector-jangan" title="jangan"></div>
-                            <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by macrovector / Freepik</a></div>
+                            <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by Freepik</a></div>
                         </div>
                         <div class="content3"><span>Bila mempunyai masalah maka cari jalan keluar yang baik dan jangan jadikan narkoba sebagai jalan pelarian.</span></div>
                         <div class="sumber" id="sumber2"><a href="https://tanahlautkab.bnn.go.id/tips-cara-mencegah-penyalahgunaan-narkoba/" target="_blank">tanahlautkab.bnn.go.id</a></div>
@@ -426,7 +426,7 @@
                 <div class="container3-2">
                     <div class="tahukah-logo akhir">
                         <div class="logo1"><img src="assets/img/team1.png" alt="teamwork" title="TERIMAKASIH UDAH MAU BACA"></div>
-                        <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by studiogstock / Freepik</a></div>
+                        <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by macrovector / Freepik</a></div>
                     </div>
                     <div class="card">
                         <div class="content3"><span>Adrian Rafi Ronald / 01 <br><br> Ammareswara Fadhil Rahadi / 04 <br><br> 
@@ -434,7 +434,7 @@
                     </div>
                     <div class="tahukah-logo akhir">
                         <div class="logo1"><img src="assets/img/team1.png" alt="teamwork" title="TERIMAKASIH YA"></div>
-                        <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by studiogstock / Freepik</a></div>
+                        <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by macrovector / Freepik</a></div>
                     </div>
                 </div>
             </div>
