ukuran tahukah kamu

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <h1>TAHUKAH KAMU?</h1>
             </div>
             <div class="container-tahukah">
-                    <div class="header2">
+                    <div class="header2" id="pertama">
                     <p>Sebenarnya NAPZA adalah <span>obat kedokteran</span> yang di ilmu pengetahuan diperlukan untuk pengobatan.</p>
                     <p>Namun, berbeda dengan obat jenis lainnya. Penggunaan NAPZA <span>harus dilakukan dengan <em style="color:#191919;">HATI-HATI</em></span> dan <span>harus di bawah pengawasan dokter.</span></p> 
                     <div class="sumber" id="sumber2"><a href="http://repositori.kemdikbud.go.id/21834/1/XI_Biologi_KD-3.11_Final.pdf" target="_blank">repositori.kemdikbud.go.id</a></div>
@@ -334,7 +334,7 @@
                             <div class="logo1"><img src="assets/img/Hukuman.png" alt="vector-hukuman" title="ancaman hukuman"></div>
                             <div class="sumber" id="freepik"><a href="http://www.freepik.com">Designed by studiogstock / Freepik</a></div>
                         </div>
-                        <div class="content3"><span>Selalu ingatkan bahwawasannya ancaman hukuman untuk penyalah guna Narkoba, 
+                        <div class="content3"><span>Selalu ingatkan bahwasanya ancaman hukuman untuk penyalah guna Narkoba, 
                             apalagi bagi pengedar Narkoba adalah Lembaga Pemasyarakatan.</span></div>
                         <div class="sumber" id="sumber2"><a href="https://tanahlautkab.bnn.go.id/tips-cara-mencegah-penyalahgunaan-narkoba/" target="_blank">tanahlautkab.bnn.go.id</a></div>
                     </div>
